[workspace]
resolver = "2"
members = ["crates/*", "lib/ds", "lib/todo", "lib/todo-grpc"]

[workspace.dependencies]
# 공통으로 사용할 외부 라이브러리들
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }


todo = { path="lib/todo" }
